# PotatoSQL

./: CMakeLists.txt
lib/cJson/: cJSON.h
sql/: JsonParser.cpp  JsonParser.h
storage/: Iterator.cpp  Iterator.h  PotatoList.cpp  PotatoList.h  PotatoMap.cpp  PotatoMap.h
unit/: KeyUnit.cpp  KeyUnit.h  RecordUnit.cpp  RecordUnit.h  SchemaUnit.cpp  SchemaUnit.h  TableUnit.cpp  TableUnit.h
